made some progress

--- a/index.html
+++ b/index.html
@@ -49,6 +49,116 @@
             <img class="row-image" src="./images/apple-back-to-school-seg-202206.png" alt="laptop">
         </div>
     </div>
+
+    <div class="banner">
+        <h1>Save on a new Mac or iPad with Apple education pricing.</h1>
+        <p>Available to current and newly accepted college students and their parents, as well as faculty, staff, and homeschool teachers of all grade levels.</p>
+    </div>
+
+    <div class="title-laptops">
+        <h2>Mac</h2>
+        <p>Education pricing shown for all Mac models.</p>
+    </div>
+
+    <div class="grid">
+        <div class="laptop">
+            <div class="laptop-image">
+                <img src="images/macbook-air-segment-202110_GEO_US.png" alt="">
+            </div>
+            <div class="laptop-title">
+                <p>MacBook Air with M1 chip</p>
+            </div>
+            <div class="laptop-price">
+                <p>From $1249</p>
+            </div>
+        </div>
+        <div class="laptop">
+            <div class="laptop-image">
+                <img src="images/macbook-air-m2-segment-202206_GEO_US.png" alt="">
+            </div>
+            <div class="laptop-title">
+                <p>MacBook Air with M2 chip</p>
+            </div>
+            <div class="laptop-price">
+                <p>From $649</p>
+            </div>
+        </div>
+        <div class="laptop">
+            <div class="laptop-image">
+                <img src="images/macbook-pro-segment-202206_GEO_US.png" alt="">
+            </div>
+            <div class="laptop-title">
+                <p>MacBook Pro</p>
+            </div>
+            <div class="laptop-price">
+                <p>From $1799</p>
+            </div>
+        </div>
+        <div class="laptop">
+            <div class="laptop-image">
+                <img src="images/imac-segment-202110_GEO_US.png" alt="">
+            </div>
+            <div class="laptop-title">
+                <p>iMac</p>
+            </div>
+            <div class="laptop-price">
+                <p>From $1249</p>
+            </div>
+        </div>
+        <div class="laptop">
+            <div class="laptop-image">
+                <img src="images/mac-mini-segment-202011.png" alt="">
+            </div>
+            <div class="laptop-title">
+                <p>Mac mini</p>
+            </div>
+            <div class="laptop-price">
+                <p>From $649</p>
+            </div>
+        </div>
+        <div class="laptop">
+            <img src="images/mac-segment-studio.png" alt="">
+            <div class="laptop-title">
+                <p>Mac Studio</p>
+            </div>
+            <div class="laptop-price">
+                <p>From $1799</p>
+            </div>
+        </div>
+        <div class="laptop">
+            <div class="laptop-image">
+                <img src="images/mac-segment-studio-display.png" alt="">
+            </div>
+            <div class="laptop-title">
+                <p>Studio Display</p>
+            </div>
+            <div class="laptop-price">
+                <p>From $1499</p>
+            </div>
+        </div>
+        <div class="laptop">
+            <div class="laptop-image">
+                <img src="images/pro-display-segment-2019.png" alt="">
+            </div>
+            <div class="laptop-title">
+                <p>Pro Display XDR</p>
+            </div>
+            <div class="laptop-price">
+                <p>From $4599</p>
+            </div>
+        </div>
+        <div class="laptop">
+            <div class="laptop-image">
+                <img src="images/mac-pro-segment-2019.png" alt="">
+            </div>
+            <div class="laptop-title">
+                <p>Mac Pro</p>
+            </div>
+            <div class="laptop-price">
+                <p>From $5599</p>
+            </div>
+        </div>
+    </div>
     
 </body>
 </html>
