--- a/index.html
+++ b/index.html
@@ -117,7 +117,9 @@
             </div>
         </div>
         <div class="laptop">
-            <img src="images/mac-segment-studio.png" alt="">
+            <div class="laptop-image">
+                <img src="images/mac-segment-studio.png" alt="">
+            </div>
             <div class="laptop-title">
                 <p>Mac Studio</p>
             </div>
